fix: Board title not showing elipsis on overflow

--- a/client/src/components/BoardActions/BoardActions.module.scss
+++ b/client/src/components/BoardActions/BoardActions.module.scss
@@ -14,9 +14,12 @@
 
   .action {
     flex: 0 0 auto;
-    display: flex;
     align-items: center;
     margin-right: 20px;
+  }
+
+  .actionFlex {
+    display: flex;
   }
 
   .actionRightFirst {
